# OpenCursor

./: .gitignore  README.md  autobuild.sh  code_understand.txt  mcp_example.py  pyproject.toml  requirements.txt  run_opencursor.py  setup.py  silence_wrapper.py  task.md  test_edit.py  tracker.txt
code_agent/: __init__.py  agent.py  app.py  cli_entry.py  prompts.py  tests.py  tools.py
code_agent/examples/: sample.py
code_agent/src/: agent.py  app.py  autonomous_test.py  gradio_ui.py  llm.py  md_test.py  prompts.py  register_tools.py  sample.py  tests.py  tool_browser.py  tool_playwright.py  tool_playwright_search.py  tools.py
code_agent/tests/: run.txt  test_cli.py  test_edit_tool.py
code_agent/tests/TestEnvironment/sample/: add.py  app.py  client.py  mcp.md  ollama_client.py  server.py
path=/home/ntlpt59/MAIN/Personal/OpenCursor/: .gitignore
src/codeagent/: agent.py  app.py  llm.py  prompts.py  tests.py
src/examples/: autonomous_test.py  sample.py
